--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,7 +4,7 @@
 <meta name ="viewport", content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <title>My Module2 Assignment Webpage</title>
-<link rel="stylesheet" href="https://github.com/tsbproject/COUSERA-ASSIGNMENT/blob/main/module2-solution/css/style.css
+<link rel="stylesheet" href="https://tsbproject.github.io/COUSERA-ASSIGNMENT/module2-solution/css/style.css
 </head>
 <body>
 
