--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,7 +4,7 @@
 <meta name ="viewport", content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <title>My Module2 Assignment Webpage</title>
-<link rel="stylesheet" type = "text/css" href="css/style.css">
+<link rel="stylesheet" type = "text/css" href="style.css">
 </head>
 <body>
 
