--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,1 +1,93 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>David Chu's China Bistro</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+</head>
+<div class="overflow-auto">
+<body>
+ <header>
+   <nav id="header-nav" class="navbar navbar-default">
+        <div class="container" >
+            <div class="navbar-header">
+
+                <div class="navbar-brand">
+                    <a href="index.html"><h1>FOOD, LLC</h1></a>
+                </div>
+
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul id="nav-list" class="nav navbar-nav navbar-right">
+
+                    <li>
+                        <a href="chicken.html">
+                            <span class=" hidden-lg hidden-md hidden-sm">Chicken</span></a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="hidden-lg hidden-md hidden-sm">Beef</span></a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span class="hidden-lg hidden-md hidden-sm">Sushi</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+ 
+</header>
+
+<!---------------------END OF THE HEADER SECTION----------------------->
+
+<!------------------------ MAIN CONTENT START---------------------->
+<div class="row">
+  <div class="container col-md-12">
+    <h1 class="page-header"> Our Menu</h1>
+  </div>
+</div>
+
+<div id="main-content" class="container col-lg-12">
+  <div class="jumbotron">
+    <h2 class="section head">Chicken</h2>
+  
+  <p>Contrary to popular belief, Lorem Ipsum is not simply random text. 
+  It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard 
+  McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin 
+  words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature,
+   discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et 
+   Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of 
+   ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", 
+   comes from a line in section 1.10.32.</p></div>
+
+   </div>
+ 
+  
+
+
+
+
+<!-- jQuery (Bootstrap JS plugins depend on it) -->
+<script src="js/jquery-3.6.3.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/script.js"></script>
+ </div>
+</body>   
+</html>
+
+
+
+
 
